tests/NormalTests/paczka1/fuzzy1/96753473.err
Error in line 5: WvnAtiDmZT S677 12,84
Error in line 7: gyBM4 S351 78,1
Error in line 2: WvnAtiDmZT S677 13,2
Error in line 21: S935 S935 67,C
Error in line 12: WvnAtiDmZT S351 65,5
Error in line 22: WvnAtiDmZT S935 25,2
Error in line 18: y0Vxaxb A938 88,9
Error in line 6: S935 S935 14,9
